# clangen

./: .gitignore  .gitmodules  .itch.toml  .pylintrc  CONTRIBUTING.md  Clan-gen.iss  ClanGenRun.py  Clangen.exe.spec  Clangen.spec  Credit List.docx  Fallbackmap.csv  LICENSE  LICENSE.md  LICENSE.txt  README.md  appdmg.json  asjduasmo  build.py  cats.py  changelog.txt  child_dislike.json  child_jealousy.json  commit.txt  dmgbuild.py  dusk.txt  general_dislike.json  general_jealousy.json  load_cat.py  main.py  names.py  pyproject.toml  requirements.txt  run.bat  run.sh  seasonalthoughts.txt  text.py  update_api_url.txt  vfsvsdvdsvds  web.tmpl  webMain.py  (+1 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
languages/: spanish.txt
resources/: buttons.json  buttons_small.json  clansettings.json  credits_text.json  defaults.json  game_config.json  gamesettings.json  idbfs.js  placements.json  prey_config.json  screen_config.json  styles.json  text_boxes.json  text_boxes_dark.json  text_boxes_dark_small.json  text_boxes_small.json  tool_tips.json  tool_tips_small.json  update.bat  update.ps1  vertical_scroll_bar.json  windows.json  windows_small.json
saves/: clanlist.txt  settings.txt
scripts/: Patrol.py  buttons.py  cats.py  checker.py  clan.py  condition_events.py  conditions.py  datadir.py  debugMenu.py  debug_menu.py  debugmode.py  enums.py  event_class.py  events.py  game_essentials.py  load_cat.py  my_events.py  names.py  patrol.py  patrols.py  pelts.py  progress_bar_updater.py  relation_events.py  relationship.py  screens.py  sendclan.py  sendlogs.py  special_dates.py  sprites.py  statistics.py  stream_duplexer.py  test_filters.py  text.py  update.py  utility.py  version.py  web.py  world.py
self_updater/: Cargo.toml
sprites/: eyes.png~  lineart.png~  scars.png~  scarsextra.png~  singlecolours.png~  singleextra.png~  skinextra.png~  speckledcolours.png~  speckledextra.png~  tabbycolours.png~  tabbyextra.png~  tortiecolours.png~  tortiesextra.png~  whiteextra.png~  whitepatches.png~
static/: index.html  manifest.json  service-worker.js
tests/: __init__.py  test_cat.py  test_cat_status.py  test_conditions.py  test_constraintbooster.py  test_encoding.py  test_filter_patrol.py  test_freshkill.py  test_group_interaction.py  test_handle_short_events.py  test_interactions.py  test_json.py  test_models.py  test_patrol.py  test_patrol_condition.py  test_patrols.py  test_pronouns.py  test_relation_events.py  test_relationships.py  test_romantic_events.py  test_save.py  test_thoughts.py  test_utility.py
utils/: util.py  version.py  web.py
verification/: update_api_url.txt  (+1 more)
(+1523 files in other folders)
