[tool.poetry]

name = "clangen"
version = "0.7.9"
description = "Fan-edit of the warrior cat clangen game"
license = "MPL-2.0"
authors = [
    "Sablesteel <noemail@null.com>"
]
readme = "README.md"
homepage = "https://sablesteel.itch.io/clan-gen-fan-edit"
repository = "https://github.com/Thlumyn/clangen/"
keywords = ["warriorcats", "fanedit", "game", "pygame"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "2.2.0"
ujson = "5.7.0"
pygame-gui = "0.6.8"
platformdirs = "=3.1.0"